--- a/app/src/main/res/layout/activity_third_screen.xml
+++ b/app/src/main/res/layout/activity_third_screen.xml
@@ -53,12 +53,24 @@
         app:layout_constraintTop_toBottomOf="@id/materialDivider"
         tools:listitem="@layout/item_user" />
 
+    <TextView
+        android:id="@+id/tv_no_data"
+        style="@style/NoDataTextViewStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_data_user"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />
+
     <ProgressBar
         android:id="@+id/progressIndicator"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:indeterminate="true"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialDivider" />
