--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -86,4 +86,12 @@
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/poppinsregular</item>
     </style>
+
+    <style name="NoDataTextViewStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/poppinssemibold</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
